--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitest/coverage-v8": "3.1.1",
     "extra-iterable": "^3.3.2",
     "fast-check": "^4.1.0",
+    "immutable": "^5.1.2",
     "iterare": "^1.2.1",
     "lazy.js": "^0.5.1",
     "lodash": "^4.17.21",
