--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -37,10 +35,6 @@
       "complexity": {
         "noBannedTypes": "off",
         "noForEach": "off"
-      },
-      "correctness": {
-        "all": true,
-        "useImportExtensions": "off"
       },
       "recommended": true
     }
