--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.3.0",
   "type": "module",
   "description": "小而快的迭代器库",
-  "keywords": ["iterator", "functional", "lazy", "collection", "util"],
+  "keywords": [
+    "iterator",
+    "functional",
+    "lazy",
+    "collection",
+    "util"
+  ],
   "author": "ZengYL <zeng-y-l@outlook.com>",
   "license": "MIT",
   "repository": "github:zeng-y-l/xunhuan",
@@ -17,32 +23,35 @@
       "require": "./dist/index.umd.cjs"
     }
   },
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "test": "vitest --coverage",
     "bench": "vitest bench",
-    "fmt": "biome format --fix",
+    "fmt": "biome check --fix --linter-enabled=false",
     "check": "biome lint --error-on-warnings && tsc",
     "compile": "vite build",
     "build": "pnpm run fmt && pnpm run check && pnpm run compile",
     "pub": "pnpm build && pnpm publish --registry=https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "^2.1.4",
     "@types/lazy.js": "^0.5.9",
-    "@types/lodash": "^4.17.16",
-    "@vitest/coverage-v8": "3.1.1",
+    "@types/lodash": "^4.17.20",
+    "@vitest/coverage-v8": "3.2.4",
     "extra-iterable": "^3.3.2",
-    "fast-check": "^4.1.0",
-    "immutable": "^5.1.2",
+    "fast-check": "^4.2.0",
+    "immutable": "^5.1.3",
     "iterare": "^1.2.1",
     "lazy.js": "^0.5.1",
     "lodash": "^4.17.21",
-    "terser": "^5.39.0",
-    "ts-pattern": "^5.7.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
+    "terser": "^5.43.1",
+    "ts-pattern": "^5.8.0",
+    "typescript": "~5.9.2",
+    "vite": "^7.1.2",
     "vite-plugin-doctest": "^1.1.1",
-    "vitest": "~3.1.1"
+    "vitest": "~3.2.4"
   }
 }
